get data from hosted json server

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET="your storage bucket"
 VITE_FIREBASE_MESSAGING_SENDER_ID="your messaging sender id"
 VITE_FIREBASE_APP_ID="your app id"
 VITE_FIREBASE_MEASUREMENT_ID="your measurement id"
+VITE_JSONSERVER_URL="your json server url"
